Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Achievement_Definition__mdt/Achievement_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Achievement Definition</label>
    <pluralLabel>Achievement Definitions</pluralLabel>
</CustomObject>