Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Achievement_Definition__mdt/fields/Bonus_XP__c.field-meta.xml
<CustomField>
    <fullName>Bonus_XP__c</fullName>
    <label>Bonus XP</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>