Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Achievement_Definition__mdt/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>