Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Achievement_Definition__mdt/fields/Criteria_Value__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value__c</fullName>
    <label>Criteria Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>